Initial Commit, core functionality working, serves web pages, need to add a class for handling POST messages, possible one that works kind of like an event handler?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,9 @@
         "semaphore": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "codecvt": "cpp",
+        "iomanip": "cpp",
+        "chrono": "cpp"
     }
 }
